<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/input_txt"
        android:layout_gravity="center"
        android:textColor="#202020"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/et_loin"
        style="@style/CustomEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints="996557071204"
        android:hint="@string/login_txt"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/CustomEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password_txt"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/check_box_state_online"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/state_online" />

    <CheckBox
        android:id="@+id/check_box_go_it_by_fingerprint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/go_in_by_fingerprint" />

    <Button
        android:id="@+id/btn_go_in"
        style="@style/CustomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_button"
        android:text="@string/go_in_txt"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_view_forget_your_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:text="@string/forgot_your_password"
        android:textColor="#FF9900" />

    <TextView
        android:id="@+id/text_view_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
        android:text="@string/registration_txt"
        android:textColor="#FF9900" />

</LinearLayout>