<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/registration_txt"
        android:textColor="#202020"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:cardCornerRadius="16dp"
        android:layout_margin="16dp"
        app:cardElevation="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/congratulate_txt"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@string/proceed_txt"
                android:textColor="#373435"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_text_code"
                style="@style/CustomEditTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:autofillHints="996557071204"
                android:hint="@string/enter_code_txt"
                android:inputType="number"
                android:paddingStart="16dp" />

            <Button
                android:id="@+id/btn_proceed"
                style="@style/CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_button"
                android:text="@string/next_proceed"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text_view_optional_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16sp"
                android:text="@string/i_didnt_get_code_txt"
                android:textColor="#FF9900" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/image_button_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_close" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>